// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/rollup.js code splitting should ouput only 1 JSON file 1`] = `
Array [
  Object {
    "file": "common.css",
    "text": "/* simple.css */
.fooga {
    color: red;
}
",
  },
  Object {
    "file": "dependencies.css",
    "text": "/* dependencies.css */
.wooga {

    background: blue;
}
",
  },
  Object {
    "file": "exports.json",
    "text": "{
    \\"dependencies.css\\": {
        \\"wooga\\": \\"fooga wooga\\"
    },
    \\"simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}",
  },
]
`;

exports[`/rollup.js code splitting should support dynamic imports 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* dynamic-imports/a.css */
.a {

    color: aqua;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* dynamic-imports/b.css */
.b {
    color: blue;
}
",
  },
  Object {
    "file": "c.css",
    "text": "/* dynamic-imports/c.css */
.c {
    
    color: cyan;
}
",
  },
  Object {
    "file": "common.css",
    "text": "/* dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support manual chunks 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* manual-chunks/a.css */
.a {

    color: red;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* manual-chunks/b.css */
.b {

    color: blue;
}
",
  },
  Object {
    "file": "common.css",
    "text": "/* manual-chunks/d.css */
/* manual-chunks/c.css */
.c {
    color: green;
    background: darkred;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support splitting up CSS files 1`] = `
Array [
  Object {
    "file": "common.css",
    "text": "/* simple.css */
.fooga {
    color: red;
}
",
  },
  Object {
    "file": "dependencies.css",
    "text": "/* dependencies.css */
.wooga {

    background: blue;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support splitting up CSS files w/ shared assets 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* css-chunks/a.css */
.a {

    color: aqua;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* css-chunks/b.css */
.b {
    
    color: blue;
}
",
  },
  Object {
    "file": "chunk.css",
    "text": "/* css-chunks/c.css */
.c {

    color: cyan;
}
",
  },
  Object {
    "file": "common.css",
    "text": "/* css-chunks/shared.css */
.shared {
    color: snow;
}
",
  },
]
`;

exports[`/rollup.js code splitting shouldn't put bundle-specific CSS in common.css 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* common-splitting/shared.css */
.shared {
    color: snow;
}
/* common-splitting/a.css */
.a {

    color: aqua;
}
/* common-splitting/b.css */
.b {

    color: blue;
}
",
  },
  Object {
    "file": "c.css",
    "text": "/* common-splitting/c.css */
.c {
    color: cyan;
}
",
  },
]
`;
